--- a/app/views/court-decision.html
+++ b/app/views/court-decision.html
@@ -33,10 +33,15 @@ Home – GOV.UK Prototype Kit
         </fieldset>
       </div>
 
-    <a href="/contact-us" role="button" draggable="false" class="govuk-button govuk-button"
-      data-module="govuk-button">
-      Continue
-    </a>
+      <form action="/contact-us" method="post" novalidate>
+
+        <input type="hidden" name="continue" value="true">
+  
+        <button type="submit" class="govuk-button" data-module="govuk-button">
+          Continue
+        </button>
+  
+      </form>
   </div>
 
   <div class="govuk-grid-column-one-third">
