update to ask where the other parent lives and include a text area rather than radio buttons

--- a/app/views/where-does-the-other-parent-live.html
+++ b/app/views/where-does-the-other-parent-live.html
@@ -8,36 +8,14 @@ Home – GOV.UK Prototype Kit
 <a href="/where-do-you-live" class="govuk-back-link">Back</a>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Does the other parent live in England, Scotland, Wales or Northern Ireland?
+    <h1 class="govuk-heading-xl">Where does the other parent live?
     </h1>{{releaseVersion | log }}
 
     <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset">
-        <div class="govuk-radios" data-module="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-does-other-parent-live" name="where-does-other-parent-live"
-              type="radio" value="yes">
-            <label class="govuk-label govuk-radios__label" for="where-does-other-parent-live">
-              Yes
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-does-other-parent-live-2" name="where-does-other-parent-live"
-              type="radio" value="no">
-            <label class="govuk-label govuk-radios__label" for="where-does-other-parent-live-2">
-              No
-            </label>
-          </div>
-          <div class="govuk-radios__divider">or</div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-does-other-parent-live-6" name="where-does-other-parent-live"
-              type="radio" value="abroad">
-            <label class="govuk-label govuk-radios__label" for="where-does-other-parent-live-6">
-              I do not know where the other parent lives
-            </label>
-          </div>
-        </div>
-      </fieldset>
+      <div id="more-detail-hint" class="govuk-hint">
+        Provide the town or city and country that the other parent lives in. <br>If you do not know where the other parent lives, write 'I do not know where the other parent lives'.
+      </div>
+      <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
     </div>
 
     <form action="/paying-or-receiving" method="post" novalidate>
