remove links on start page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,15 +17,12 @@ Home – GOV.UK Prototype Kit
       <li>using the Child Maintenance Service</li>
     </ul>
     </p>
-    <p class="govuk-body"><a
-        href="https://child-maintenance.service.gov.uk/get-help-arranging-child-maintenance/contact-child-maintenance-choices"
-        class="govuk-link">Contact Child Maintenance Choices if you live in Northern Ireland</a></p>
+    <p class="govuk-body">Contact Child Maintenance Choices if you live in Northern Ireland</p>
 
     <h2 class="govuk-heading-m">Using the Child Maintenance Service</h2>
     <h3 class="govuk-heading-s">If you already have an active case</h3>
-    <p class="govuk-body">If you have a case with the same parent you should <a
-        href="https://www.gov.uk/manage-child-maintenance-case/changes-you-need-to-report" class="govuk-link">report a
-        change of circumstances</a> instead of making a new arrangement. You can use this service if you want to set up
+    <p class="govuk-body">If you have a case with the same parent you should report a
+        change of circumstances instead of making a new arrangement. You can use this service if you want to set up
       a new arrangement with a different parent.</p>
 
     <h3 class="govuk-heading-s">Fees</h3>
@@ -39,8 +36,7 @@ Home – GOV.UK Prototype Kit
     </ul>
     </p>
 
-    <p class="govuk-body"><a href="https://www.gov.uk/guidance/domestic-abuse-how-to-get-help" class="govuk-link">Get
-        help if you have experienced domestic abuse</a></p>
+    <p class="govuk-body">Get help if you have experienced domestic abuse</p>
 
     <h3 class="govuk-heading-s">If you're worried about contacting the other parent</h3>
     <p class="govuk-body">If you decide to use the Child Maintenance Service, we will try to contact the other parent
