--- a/app/views/paying-or-receiving.html
+++ b/app/views/paying-or-receiving.html
@@ -4,8 +4,14 @@
 Home – GOV.UK Prototype Kit
 {% endblock %}
 
+{% block beforeContent %}
+  {{ govukBackLink({
+    href: "/where-does-the-other-parent-live",
+    text: "Back"
+  }) }}
+{% endblock %}
+
 {% block content %}
-<a href="/where-does-the-other-parent-live" class="govuk-back-link">Back</a>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Will you be paying or receiving child maintenance?
