--- a/app/views/where-do-you-live.html
+++ b/app/views/where-do-you-live.html
@@ -4,8 +4,14 @@
 Home – GOV.UK Prototype Kit
 {% endblock %}
 
+{% block beforeContent %}
+  {{ govukBackLink({
+    href: "/research-questions",
+    text: "Back"
+  }) }}
+{% endblock %}
+
 {% block content %}
-<a href="/research-questions" class="govuk-back-link">Back</a>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Where do you live?
