--- a/app/views/research-questions.html
+++ b/app/views/research-questions.html
@@ -53,16 +53,12 @@ Home – GOV.UK Prototype Kit
     </form>
   </div>
 
-  <div class="govuk-grid-column-one-third">
-    <div class="govuk-hide-this-page" data-module="govuk-hide-this-page">
-      <a href="https://www.google.com/" role="button" draggable="false"
-        class="govuk-button govuk-button--warning govuk-hide-this-page__button govuk-js-hide-this-page-button"
-        data-module="govuk-button" data-new-tab-url="https://www.cgtn.com/nature/weathermap.html"
-        data-fake-page-title="How to prevent the spread of Coronavirus - GOV.UK">
-        Hide this page
-      </a>
-    </div>
-  </div>
+  {{ govukHideThisPage({
+    text: "Hide this page",
+    currentTabURL: "https://www.google.com/",
+    newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+    fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
+  }) }}
 </div>
 
 {% endblock %}
