--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,16 +63,12 @@ Home – GOV.UK Prototype Kit
         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
       </svg></a>
   </div>
-  <div class="govuk-grid-column-one-third">
-    <div class="govuk-hide-this-page" data-module="govuk-hide-this-page">
-      <a href="https://www.google.com/" role="button" draggable="false"
-        class="govuk-button govuk-button--warning govuk-hide-this-page__button govuk-js-hide-this-page-button"
-        data-module="govuk-button" data-new-tab-url="https://www.cgtn.com/nature/weathermap.html"
-        data-fake-page-title="How to prevent the spread of Coronavirus - GOV.UK">
-        Hide this page
-      </a>
-    </div>
-  </div>
-</div>
 
+  {{ govukHideThisPage({
+    text: "Hide this page",
+    currentTabURL: "https://www.google.com/",
+    newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+    fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
+  }) }}
+</div>
 {% endblock %}
