--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -16,6 +16,7 @@
 {% from "govuk/components/error-summary/macro.njk"       import govukErrorSummary %}
 {% from "govuk/components/fieldset/macro.njk"            import govukFieldset %}
 {% from "govuk/components/file-upload/macro.njk"         import govukFileUpload %}
+{% from "govuk/components/hide-this-page/macro.njk"      import govukHideThisPage %}
 {% from "govuk/components/input/macro.njk"               import govukInput %}
 {% from "govuk/components/inset-text/macro.njk"          import govukInsetText %}
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
