--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -10,8 +10,7 @@ Home – GOV.UK Prototype Kit
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Using ‘Hide this page’ and staying safe online</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
-      You can use the ‘Hide this page’ button to quickly exit this website. <a href="#" class="govuk-link">Find out more
-        about this safety feature and how to stay safe online</a></div>
+      You can use the ‘Hide this page’ button to quickly exit this website.</div>
 
     <p class="govuk-body">
       The ‘Hide this page’ button will quickly hide the page you’re on. This might be less noticeable to someone around
