remove research questions page as it may confuse users of the prototype

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,7 +58,7 @@ Home – GOV.UK Prototype Kit
       We will not share any other information with the other parent unless you ask us to.
     </div>
 
-    <a href="/research-questions" role="button" draggable="false" class="govuk-button govuk-button--start"
+    <a href="/where-do-you-live" role="button" draggable="false" class="govuk-button govuk-button--start"
       data-module="govuk-button">
       Start now
       <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19"
