--- a/app/views/where-do-you-live.html
+++ b/app/views/where-do-you-live.html
@@ -6,7 +6,7 @@ Home – GOV.UK Prototype Kit
 
 {% block beforeContent %}
   {{ govukBackLink({
-    href: "/research-questions",
+    href: "/",
     text: "Back"
   }) }}
 {% endblock %}
