--- a/app/views/contact-us.html
+++ b/app/views/contact-us.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Home – GOV.UK Prototype Kit
+Contact us
 {% endblock %}
 
 {% block beforeContent %}
@@ -38,7 +38,7 @@ Home – GOV.UK Prototype Kit
   {{ govukHideThisPage({
     text: "Hide this page",
     currentTabURL: "https://www.google.com/",
-    newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+    newTabURL: "https://www.bbc.co.uk/weather",
     fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
   }) }}
 </div>
