--- a/app/views/court-decision.html
+++ b/app/views/court-decision.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Home – GOV.UK Prototype Kit
+Have you had a court decision about child maintenance payments in the last 12 months?
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@ Home – GOV.UK Prototype Kit
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Have you had a court decision about child maintenance payments in the last 12 months?
+    <h1 class="govuk-heading-l">Have you had a court decision about child maintenance payments in the last 12 months?
     </h1>{{releaseVersion | log }}
     <p class="govuk-hint">
       This type of decision is sometimes called a ’court order’, ’maintenance order’ or ’minute of agreement’. We do not
@@ -53,7 +53,7 @@ Home – GOV.UK Prototype Kit
   {{ govukHideThisPage({
     text: "Hide this page",
     currentTabURL: "https://www.google.com/",
-    newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+    newTabURL: "https://www.bbc.co.uk/weather",
     fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
   }) }}
 </div>
