--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Home – GOV.UK Prototype Kit
+Get help arranging child maintenance
 {% endblock %}
 
 {% block content %}
@@ -70,7 +70,7 @@ Home – GOV.UK Prototype Kit
   {{ govukHideThisPage({
   text: "Hide this page",
   currentTabURL: "https://www.google.com/",
-  newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+  newTabURL: "https://www.bbc.co.uk/weather",
   fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
   }) }}
 </div>
