--- a/app/views/paying-or-receiving.html
+++ b/app/views/paying-or-receiving.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Home – GOV.UK Prototype Kit
+Will you be paying or receiving child maintenance?
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@ Home – GOV.UK Prototype Kit
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Will you be paying or receiving child maintenance?
+    <h1 class="govuk-heading-l">Will you be paying or receiving child maintenance?
     </h1>{{releaseVersion | log }}
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
@@ -51,7 +51,7 @@ Home – GOV.UK Prototype Kit
   {{ govukHideThisPage({
     text: "Hide this page",
     currentTabURL: "https://www.google.com/",
-    newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+    newTabURL: "https://www.bbc.co.uk/weather",
     fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
   }) }}
 </div>
