--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Home – GOV.UK Prototype Kit
+Using ‘Hide this page’ and staying safe online
+{% endblock %}
+
+{% block beforeContent %}
+  {{ govukBackLink({
+    href: "/",
+    text: "Back"
+  }) }}
 {% endblock %}
 
 {% block content %}
@@ -39,7 +46,7 @@ Home – GOV.UK Prototype Kit
   {{ govukHideThisPage({
   text: "Hide this page",
   currentTabURL: "https://www.google.com/",
-  newTabURL: "https://www.cgtn.com/nature/weathermap.html",
+  newTabURL: "https://www.bbc.co.uk/weather",
   fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
   }) }}
 </div>
