--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -57,7 +57,7 @@
       href: 'https://www.google.com/',
       text: 'Hide this page',
       attributes: {
-        'data-new-tab-url': 'https://www.cgtn.com/nature/weathermap.html',
+        'data-new-tab-url': 'https://www.bbc.co.uk/weather',
         'data-fake-page-title': 'How to prevent the spread of Coronavirus - GOV.UK'
       },
       classes: 'govuk-js-hide-this-page-button'
