--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,10 +10,11 @@ Get help arranging child maintenance
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Get help arranging child maintenance</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
-      You can use the ‘Hide this page’ button to quickly exit this website. <a href="/safety-content" class="govuk-link">Find out more
-        about this safety feature and how to stay safe online</a></div>
+      You can use the ‘Hide this page’ button or press ‘Esc’ to quickly exit this website. <a href="/safety-content"
+        class="govuk-link">Read about this safety feature and how to stay safe online</a></div>
 
-    <p class="govuk-body">This service will give you information about the different options available to make a child maintenance
+    <p class="govuk-body">This service will give you information about the different options available to make a child
+      maintenance
       arrangement. These are:
     <ul class="govuk-list govuk-list--bullet">
       <li>making your own arrangement</li>
