--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -33,13 +33,13 @@ text: "Back"
     <p class="govuk-body">Using ‘Hide this page’ will:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>open a new tab and take you to <a href="https://www.bbc.co.uk/weather" class="govuk-link">BBC Weather</a></li>
-      <li>navigate the previous tab (with the page you were looking at) to <a href="https://www.google.com/"
-          class="govuk-link">Google</a></li>
-      <li>hide the page in your browser history by making it look like you were on a GOV.UK page on Coronavirus</li>
+      <li>change the previous tab (with the page you were looking at) to <a href="https://www.google.com/"
+          class="govuk-link">Google</a> search</li>
+      <li>hide the page in your browser history by making it look like you were on an unrelated page with a different name</li>
     </ul>
 
-    <p class="govuk-body">However, it does not actually erase your history. If you use the back button on your browser,
-      it will return back to the pages you were on before.</p>
+    <p class="govuk-body">Using the ‘Hide this page’ button does not actually erase your history. If you use the back button on your browser,
+      it will return you to the page you were on before.</p>
 
     <h2 class="govuk-heading-m">Ways to stay safe online</h2>
 
@@ -48,26 +48,27 @@ text: "Back"
 
     <p class="govuk-body">You can make it more difficult for them by taking some precautions.</p>
 
-    <p class="govuk-body">But if you think your devices or internet search activities are being monitored, try to use a
+    <p class="govuk-body">If you think your devices or internet search activities are being monitored, try to use a
       device that is not being monitored. That should be a device that the person does not or has not had physical or
       remote access to. This is the safest thing to do if you do not want someone to know that you’re visiting certain
       websites.</p>
 
-    <h3 class="govuk-heading-s">How to cover your tracks</h3>
+    <h4 class="govuk-heading-s">How to cover your tracks online</h4>
 
-    <p class="govuk-body">Every time you use the internet, your browser stores a record of what you’ve done with:</p>
+    <p class="govuk-body">Every time you use the internet, your browser stores a record of where you’ve been online with:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>a list of the pages you’ve looked at and the files you’ve downloaded</li>
-      <li>text files called cookies which remember your settings for different sites</li>
+      <li>small files called cookies which remember your settings for different sites</li>
     </ul>
 
-    <p class="govuk-body">You can improve your safety by deleting your history. But you need to be careful because:</p>
+    <h4 class="govuk-heading-s">Deleting browser history</h4>
+    <p class="govuk-body">You can improve your safety by deleting your browser history. But you need to be careful because:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>deleting cookies will also get rid of stored passwords for online accounts</li>
       <li>clearing your history could make someone more suspicious</li>
     </ul>
 
-    <p class="govuk-body">Every time you use the internet, your browser stores a record of what you’ve done with:</p>
+    <p class="govuk-body">Try to only remove information about the websites you want to keep private. You can find out how to do that on:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li><a href="https://support.google.com/chrome/answer/95589?hl=en&rd=1" class="govuk-link">Google Chrome</a></li>
       <li><a
