--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -17,7 +17,8 @@ text: "Back"
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Staying safe online</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
-      You can use the ‘Hide this page’ button or press ‘Esc’ to quickly exit this website.</div>
+      You can use the ‘Hide this page’ button or press ‘Esc’ to quickly exit this website. You’ll lose any information
+      you’ve entered.</div>
 
     <p class="govuk-body">This website uses a safety feature to help you quickly hide the page you’re on. It’s designed
       to be less noticeable to someone around you than closing the web browser completely.</p>
@@ -34,11 +35,13 @@ text: "Back"
     <ul class="govuk-list govuk-list--bullet">
       <li>open a new tab and take you to <a href="https://www.bbc.co.uk/weather" class="govuk-link">BBC Weather</a></li>
       <li>change the previous tab (with the page you were looking at) to <a href="https://www.google.com/"
-          class="govuk-link">Google</a> search</li>
-      <li>hide the page in your browser history by making it look like you were on an unrelated page with a different name</li>
+          class="govuk-link">Google search</a></li>
+      <li>hide the page in your browser history by making it look like you were on an unrelated page with a different
+        name</li>
     </ul>
 
-    <p class="govuk-body">Using the ‘Hide this page’ button does not actually erase your history. If you use the back button on your browser,
+    <p class="govuk-body">Using the ‘Hide this page’ button does not actually erase your history. If you use the back
+      button on your browser,
       it will return you to the page you were on before.</p>
 
     <h2 class="govuk-heading-m">Ways to stay safe online</h2>
@@ -53,22 +56,25 @@ text: "Back"
       remote access to. This is the safest thing to do if you do not want someone to know that you’re visiting certain
       websites.</p>
 
-    <h4 class="govuk-heading-s">How to cover your tracks online</h4>
+    <h3 class="govuk-heading-s">Cover your tracks online</h3>
 
-    <p class="govuk-body">Every time you use the internet, your browser stores a record of where you’ve been online with:</p>
+    <p class="govuk-body">Every time you use the internet, your browser stores a record of where you’ve been online
+      with:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>a list of the pages you’ve looked at and the files you’ve downloaded</li>
       <li>small files called cookies which remember your settings for different sites</li>
     </ul>
 
-    <h4 class="govuk-heading-s">Deleting browser history</h4>
-    <p class="govuk-body">You can improve your safety by deleting your browser history. But you need to be careful because:</p>
+    <h3 class="govuk-heading-s">Deleting browser history</h3>
+    <p class="govuk-body">You can improve your safety by deleting your browser history. But you need to be careful
+      because:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>deleting cookies will also get rid of stored passwords for online accounts</li>
       <li>clearing your history could make someone more suspicious</li>
     </ul>
 
-    <p class="govuk-body">Try to only remove information about the websites you want to keep private. You can find out how to do that on:</p>
+    <p class="govuk-body">Try to only remove information about the websites you want to keep private. You can find out
+      how to do that on:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li><a href="https://support.google.com/chrome/answer/95589?hl=en&rd=1" class="govuk-link">Google Chrome</a></li>
       <li><a
@@ -85,7 +91,7 @@ text: "Back"
 
     <p class="govuk-body">You can also look at a website without information like cookies being stored by using the
       private browsing setting in your browser. Go to the menu, click on ‘File’ and choose:</p>
-    
+
     <ul class="govuk-list govuk-list--bullet">
       <li>InPrivate on Internet Explorer</li>
       <li>Private Browsing on Mozilla Firefox or Opera</li>
