change made to the component, remove the history scrubbing feature

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,8 +10,9 @@ Get help arranging child maintenance
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Get help arranging child maintenance</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
-      You can use the ‘Hide this page’ button or press ‘Esc’ to quickly exit this website. You’ll lose any information
-      you’ve entered. <br> <a href="/safety-content" class="govuk-link">Read about this safety feature and how to stay safe online</a>
+      <h2 class="govuk-heading-s">You can quickly exit this website</h2><br>use the ‘Hide this page’ button or
+      pressing ‘Esc’. Any information you enter will not be saved.<br><a href="/safety-content" class="govuk-link">Read
+        about this safety feature and how to stay safe online</a>
     </div>
 
     <p class="govuk-body">This service will give you information about the different options available to make a child
