--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -17,8 +17,8 @@ text: "Back"
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Staying safe online</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
-      You can use the ‘Hide this page’ button or press ‘Esc’ to quickly exit this website. You’ll lose any information
-      you’ve entered.</div>
+      <h2 class="govuk-heading-s">You can quickly exit this website</h2><br>use the ‘Hide this page’ button or
+      pressing ‘Esc’. Any information you enter will not be saved.<br></div>
 
     <p class="govuk-body">This website uses a safety feature to help you quickly hide the page you’re on. It’s designed
       to be less noticeable to someone around you than closing the web browser completely.</p>
