formatting and content review of the safety content bringing it inline with the changes made to the component

--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -17,95 +17,96 @@ text: "Back"
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Staying safe online</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
-      <h2 class="govuk-heading-s">You can quickly exit this website</h2><br>use the ‘Hide this page’ button or
-      pressing ‘Esc’. Any information you enter will not be saved.<br></div>
+      <h2 class="govuk-heading-s">You can quickly exit this website</h2><br>Use the ‘Hide this page’ button or press
+      ‘Esc’ 3 times. Any information you entered will not be saved./div>
 
-    <p class="govuk-body">This website uses a safety feature to help you quickly hide the page you’re on. It’s designed
-      to be less noticeable to someone around you than closing the web browser completely.</p>
+      <p class="govuk-body">This website uses a safety feature to help you quickly hide the page you’re on. It’s
+        designed
+        to be less noticeable to someone around you than closing the web browser completely.</p>
 
-    <p class="govuk-body">If you think someone is monitoring what you do online, you should also take other precautions
-      to stay safe.</p>
+      <h2 class="govuk-heading-m">Hide this page button</h2>
 
-    <h2 class="govuk-heading-m">Hide this page button</h2>
+      <p class="govuk-body">When you’re on a page with the ‘Hide this page’ button, you can click the button or press
+        the
+        ‘Esc’ button on your keyboard 3 times.</p>
 
-    <p class="govuk-body">When you’re on a page with the ‘Hide this page’ button, you can click the button or press the
-      ‘Esc’ button on your keyboard.</p>
+      <p class="govuk-body">Using ‘Hide this page’ will make your browser:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>open a new tab and take you to <a href="https://www.bbc.co.uk/weather" class="govuk-link">BBC Weather</a>
+        </li>
+        <li>change the previous tab (with the page you were looking at) to <a href="https://www.google.com/"
+            class="govuk-link">Google search</a></li>
+      </ul>
 
-    <p class="govuk-body">Using ‘Hide this page’ will:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>open a new tab and take you to <a href="https://www.bbc.co.uk/weather" class="govuk-link">BBC Weather</a></li>
-      <li>change the previous tab (with the page you were looking at) to <a href="https://www.google.com/"
-          class="govuk-link">Google search</a></li>
-      <li>hide the page in your browser history by making it look like you were on an unrelated page with a different
-        name</li>
-    </ul>
+      <p class="govuk-body">‘Hide this page’ might work differently depending on your browser and device settings.</p>
 
-    <p class="govuk-body">Using the ‘Hide this page’ button does not actually erase your history. If you use the back
-      button on your browser,
-      it will return you to the page you were on before.</p>
 
-    <h2 class="govuk-heading-m">Ways to stay safe online</h2>
+      <p class="govuk-body">Using ‘Hide this page’ does not actually erase your browser history. If you think someone is
+        monitoring what you do online, you should take other precautions to stay safe.</p>
 
-    <p class="govuk-body">It can be easy for someone to see what you’re doing online, especially if you’re using a home
-      computer.</p>
+      <h2 class="govuk-heading-m">Ways to stay safe online</h2>
 
-    <p class="govuk-body">You can make it more difficult for them by taking some precautions.</p>
+      <p class="govuk-body">It can be easy for someone to see what you’re doing online, especially if you’re using a
+        home computer.</p>
 
-    <p class="govuk-body">If you think your devices or internet search activities are being monitored, try to use a
-      device that is not being monitored. That should be a device that the person does not or has not had physical or
-      remote access to. This is the safest thing to do if you do not want someone to know that you’re visiting certain
-      websites.</p>
+      <p class="govuk-body">You can make it more difficult for them by taking some precautions.</p>
 
-    <h3 class="govuk-heading-s">Cover your tracks online</h3>
+      <p class="govuk-body">If you think your devices or internet search activities are being monitored, try to use a
+        device that is not being monitored. That should be a device that the person does not or has not had physical or
+        remote access to. This is the safest thing to do if you do not want someone to know that you’re visiting certain
+        websites.</p>
 
-    <p class="govuk-body">Every time you use the internet, your browser stores a record of where you’ve been online
-      with:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>a list of the pages you’ve looked at and the files you’ve downloaded</li>
-      <li>small files called cookies which remember your settings for different sites</li>
-    </ul>
+      <h3 class="govuk-heading-s">Cover your tracks online</h3>
 
-    <h3 class="govuk-heading-s">Deleting browser history</h3>
-    <p class="govuk-body">You can improve your safety by deleting your browser history. But you need to be careful
-      because:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>deleting cookies will also get rid of stored passwords for online accounts</li>
-      <li>clearing your history could make someone more suspicious</li>
-    </ul>
+      <p class="govuk-body">Every time you use the internet, your browser stores a record of where you’ve been online
+        with:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>a list of the pages you’ve looked at and the files you’ve downloaded</li>
+        <li>small files called cookies which remember your settings for different sites</li>
+      </ul>
 
-    <p class="govuk-body">Try to only remove information about the websites you want to keep private. You can find out
-      how to do that on:</p>
-    <ul class="govuk-list govuk-list--bullet">
-      <li><a href="https://support.google.com/chrome/answer/95589?hl=en&rd=1" class="govuk-link">Google Chrome</a></li>
-      <li><a
-          href="https://support.microsoft.com/en-us/windows/view-and-delete-your-browsing-history-in-internet-explorer-098ffe52-5ac9-a449-c296-c735c32c8678"
-          class="govuk-link">Internet Explorer</a></li>
-      <li><a href="https://support.mozilla.org/en-US/kb/delete-browsing-search-download-history-firefox"
-          class="govuk-link">Mozilla Firefox</a></li>
-      <li><a href="https://support.apple.com/kb/PH19215?locale=en_US&viewlocale=en_US" class="govuk-link">Safari</a>
-      </li>
-      <li><a href="http://www.opera.com/help/tutorials/security/sharing/" class="govuk-link">Opera</a></li>
-    </ul>
+      <h3 class="govuk-heading-s">Deleting browser history</h3>
+      <p class="govuk-body">You can improve your safety by deleting your browser history. But you need to be careful
+        because:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>deleting cookies will also get rid of stored passwords for online accounts</li>
+        <li>clearing your history could make someone more suspicious</li>
+      </ul>
 
-    <h3 class="govuk-heading-s">Browsing in private</h3>
+      <p class="govuk-body">Try to only remove information about the websites you want to keep private. You can find out
+        how to do that on:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://support.google.com/chrome/answer/95589?hl=en&rd=1" class="govuk-link">Google Chrome</a>
+        </li>
+        <li><a
+            href="https://support.microsoft.com/en-us/windows/view-and-delete-your-browsing-history-in-internet-explorer-098ffe52-5ac9-a449-c296-c735c32c8678"
+            class="govuk-link">Internet Explorer</a></li>
+        <li><a href="https://support.mozilla.org/en-US/kb/delete-browsing-search-download-history-firefox"
+            class="govuk-link">Mozilla Firefox</a></li>
+        <li><a href="https://support.apple.com/kb/PH19215?locale=en_US&viewlocale=en_US" class="govuk-link">Safari</a>
+        </li>
+        <li><a href="http://www.opera.com/help/tutorials/security/sharing/" class="govuk-link">Opera</a></li>
+      </ul>
 
-    <p class="govuk-body">You can also look at a website without information like cookies being stored by using the
-      private browsing setting in your browser. Go to the menu, click on ‘File’ and choose:</p>
+      <h3 class="govuk-heading-s">Browsing in private</h3>
 
-    <ul class="govuk-list govuk-list--bullet">
-      <li>InPrivate on Internet Explorer</li>
-      <li>Private Browsing on Mozilla Firefox or Opera</li>
-      <li>Incognito on Google Chrome</li>
-      <li>Private Window on Safari</li>
-    </ul>
+      <p class="govuk-body">You can also look at a website without information like cookies being stored by using the
+        private browsing setting in your browser. Go to the menu, click on ‘File’ and choose:</p>
 
+      <ul class="govuk-list govuk-list--bullet">
+        <li>InPrivate on Internet Explorer</li>
+        <li>Private Browsing on Mozilla Firefox or Opera</li>
+        <li>Incognito on Google Chrome</li>
+        <li>Private Window on Safari</li>
+      </ul>
+
+    </div>
+
+    {{ govukHideThisPage({
+    text: "Hide this page",
+    currentTabURL: "https://www.google.com/",
+    newTabURL: "https://www.bbc.co.uk/weather",
+    fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
+    }) }}
   </div>
-
-  {{ govukHideThisPage({
-  text: "Hide this page",
-  currentTabURL: "https://www.google.com/",
-  newTabURL: "https://www.bbc.co.uk/weather",
-  fakePageTitle: "How to prevent the spread of Coronavirus - GOV.UK"
-  }) }}
-</div>
-{% endblock %}
+  {% endblock %}
