--- a/app/views/safety-content.html
+++ b/app/views/safety-content.html
@@ -18,7 +18,7 @@ text: "Back"
     <h1 class="govuk-heading-l">Staying safe online</h1>{{releaseVersion | log }}
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-s">You can quickly exit this website</h2><br>Use the ‘Hide this page’ button or press
-      ‘Esc’ 3 times. Any information you entered will not be saved./div>
+      ‘Esc’ 3 times. Any information you entered will not be saved.</div>
 
       <p class="govuk-body">This website uses a safety feature to help you quickly hide the page you’re on. It’s
         designed
