change hide to exit thoughout prototype

--- a/app/views/contact-us.html
+++ b/app/views/contact-us.html
@@ -35,7 +35,7 @@ Contact us
     </div>
   </div>
 
-  {{ govukHideThisPage({
+  {{ govukExitThisPage({
     text: "Exit this page",
     redirectUrl: "https://www.bbc.co.uk/weather"
 }) }}
