--- a/app/views/court-decision.html
+++ b/app/views/court-decision.html
@@ -50,7 +50,7 @@ Have you had a court decision about child maintenance payments in the last 12 mo
       </form>
   </div>
 
-  {{ govukHideThisPage({
+  {{ govukExitThisPage({
     text: "Exit this page",
     redirectUrl: "https://www.bbc.co.uk/weather"
 }) }}
