--- a/app/views/paying-or-receiving.html
+++ b/app/views/paying-or-receiving.html
@@ -48,7 +48,7 @@ Will you be paying or receiving child maintenance?
     </form>
   </div>
 
-  {{ govukHideThisPage({
+  {{ govukExitThisPage({
     text: "Exit this page",
     redirectUrl: "https://www.bbc.co.uk/weather"
 }) }}
