--- a/app/views/where-do-you-live.html
+++ b/app/views/where-do-you-live.html
@@ -55,7 +55,7 @@ Where do you live?
     </form>
   </div>
 
-  {{ govukHideThisPage({
+  {{ govukExitThisPage({
     text: "Exit this page",
     redirectUrl: "https://www.bbc.co.uk/weather"
 }) }}
