--- a/app/views/where-does-the-other-parent-live.html
+++ b/app/views/where-does-the-other-parent-live.html
@@ -34,7 +34,7 @@ Where does the other parent live?
     </form>
   </div>
 
-  {{ govukHideThisPage({
+  {{ govukExitThisPage({
     text: "Exit this page",
     redirectUrl: "https://www.bbc.co.uk/weather"
 }) }}
